--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/cpprelude"]
 	path = deps/cpprelude
 	url = git@github.com:MoustaphaSaad/cpprelude.git
+[submodule "unittest/deps/Catch2"]
+	path = unittest/deps/Catch2
+	url = git@github.com:catchorg/Catch2.git
